# daily_info_bot

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
src/morning_briefing_bot/: __init__.py  bot.py  charts.py  config.py  keyboards.py  main.py  models.py
src/morning_briefing_bot/services/: __init__.py  briefing.py  fred.py  fx.py  weather.py
